Fixed icon left alignment

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -227,7 +227,7 @@ h3.archive__date {
 
   a {
       font-size: $type-size-3;
-      margin: 0em 0.3em;
+      margin: 0em 0.6em 0em 0em;
       &:hover {
         color: $secondary-color;
       }
